--- a/src/xgp3.0.0/CHANGELOG.txt
+++ b/src/xgp3.0.0/CHANGELOG.txt
@@ -6,13 +6,16 @@ CORE
 [#000] Fleet1 page refactor to include model, did the same to Fleet2 page.-
 [#000] Fixed some PHP7 notices and warnings.-
 
+BUILDINGS
+[#000] PHP 7 buildings page compatibility issues fixed.-
+
 OVERVIEW
 [#165] Fixed issue that was causing planet renaming problems [By MahmutHizal & BeReal].-
 
 FLEETS
 [#175] Fixed ACS invitations issues [By Neko].-
 [#000] Fixed fuel consumption formulas.-
-[#000] PHP 7.1 fleet1 page compatibility issues fixed.-
+[#000] PHP 7 fleet1 page compatibility issues fixed.-
 
 '3.0.3' => 10/11/2016
 GALAXY
