--- a/src/CHANGELOG.txt
+++ b/src/CHANGELOG.txt
@@ -2,7 +2,8 @@
 CORE
 [#000] Reworked project structure, some files were moved around and relocated for better comprehension.-
 [#000] Reworked how the core and libraries are loaded. AutoLoader class is now being used.-
-[#000] Reworked project structure.-
+[#000] Converted database.php into a library, not longer attached to the core.-
+[#000] Created several models files to store in one places all the queries related to a controller or library.-
 
 ADMIN
 [#000] Modified config.php file writable alert.-
