--- a/src/CHANGELOG.txt
+++ b/src/CHANGELOG.txt
@@ -1,40 +1,8 @@
 '3.1.0' =>
-CORE
-[#000] Reworked project structure, some files were moved around and relocated for better comprehension.-
-[#000] Reworked how the core and libraries are loaded. AutoLoader class is now being used.-
-[#000] Converted database.php into a library, not longer attached to the core.-
-[#000] Created several models files to store in one places all the queries related to a controller or library.-
-[#000] Reworked how many libraries are included.-
-[#000] Fixed issue that was causing admins to be locked out when they set the game as disabled.-
-[#000] Improved file access security.-
-[#000] Vendors was relocated to third_party.-
-[#000] New system folder created, to adapt to future plans.-
-[#000] Reworked missions system.-
+[#000] New core, for all the pages.-
+[#000] Added Unit Testing.-
+[#000] New features.-
 
-ADMIN
-[#000] Modified config.php file writable alert.-
-
-MISSIONS
-[#000] Fixed duplicates issue.-
-
-DEBUG
-[#000] Added PHP Errors tracking, will be saved into the data/logs directory.-
-[#000] Improved how error reporting and logging works. New LOG_ERRORS constant allows to keep track of PHP errors and DB errors, all or none.
-
-BUILDINGS
-[#000] Rewritten the code to handle the buildings queue, created new buildings library.-
-[#000] Reworked buildings page structure.-
-
-SHIPYARD & DEFENSES
-[#177] Fixed several notices in the shipyard and defenses pages.-
-[#179] Fixed ship and defenses construction in the shipyard and defenses pages (also notices and warnings).-
-[#000] Rewritten and merged into a single page, similar behavior to buildings pages (resources, facilities).-
-
-REGISTER
-[#176] Fixed registration issues
-
-TEST
-[#000] Created testing structure to implement Unit Testing.-
 
 '3.0.4' =>
 CORE
