--- a/src/CHANGELOG.txt
+++ b/src/CHANGELOG.txt
@@ -10,6 +10,7 @@ Core
 [#000] Pages templates structure simplified to follow the controllers and models structure into adm, ajax, game, home and install.-
 [#000] Menu UI set a little bit closer to OGame's redesign.-
 [#000] New error handler class that properly handles notices, warnings and fatal errors (only fatal errors are blockers from now on).-
+[#000] New core to handle languages and allow multiple language load, each page has its own language and not the whole languge array.-
 
 Project
 [#000] Added Unit Testing.-
