--- a/src/CHANGELOG.txt
+++ b/src/CHANGELOG.txt
@@ -1,23 +1,30 @@
 '3.1.0' =>
 Core
-[#000] New core, for all the pages, PHP 7.1+.-
+[#000] New core, for all the pages, PHP 7.3+.-
 [#000] Migrated to Parser library by CodeIgniter.-
 [#000] Migrated queries to Models.-
-[#000] New single page for private messages called "chat", will provably mutate into a real chat in the future.-
-[#000] Re-sorted some language lines.-
-[#000] Changelog migrated into the database using two new tables "languages" and "changelog".-
-[#000] Options page rewritten into preferences page, with simplified amount of features, deprecating many from the old ogame version.-
-[#000] Pages templates structure simplified to follow the controllers and models structure into adm, ajax, game, home and install.-
-[#000] Menu UI set a little bit closer to OGame's redesign.-
 [#000] New error handler class that properly handles notices, warnings and fatal errors (only fatal errors are blockers from now on).-
+[#000] Changelog migrated into the database using two new tables "languages" and "changelog".-
+[#000] Pages templates structure simplified to follow the controllers and models structure into adm, ajax, game, home and install.-
 [#000] New core to handle languages (by CodeIgniter) and allow multiple language load, each page has its own language and not the whole languge array.-
+[#000] Migrated languages to individual files.-
+[#000] Several code improvements making a better use of enumerators, entities, helpers, libraries, etc.-
+[#000] Many controllers were completely rewritten.-
+
+Security
+[#000] Replaced sha-1 with BCrypt.-
+[#000] Usernames were removed from sessions.-
 
 Project
 [#000] Added Unit Testing.-
 [#000] Added Docker.-
+[#000] Added Composer to quickly run a few things.-
 
 Improvements
 [#000] Seach pages includes new texts and simplified view.-
+[#000] Menu UI set a little bit closer to OGame's redesign.-
+[#000] New single page for private messages called "chat", will provably mutate into a real chat in the future.-
+[#000] Options page rewritten into preferences page, with simplified amount of features, deprecating many from the old ogame version.-
 
 Features
 [#000][game] New variables for the Bomber.-
@@ -27,6 +34,8 @@ Features
 [#000][admin] New functionality to manage backup through the admin panel, allowing admins to review, delete and download the backups.-
 [#000][admin] New functionality to add custom colors to the annoucements (previously global messages).-
 [#000][admin] New functionality to see which emails were sent and which did not in the annoucements page (previously global messages).-
+[#000][admin] New functionality to manage the changelog through the admin panel.-
+[#000][admin] New and improved functionality to manage the administration permissions and roles through the admin panel.-
 
 '3.0.4' =>
 CORE
